fix white flash at bottom page and spacing for reset button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,11 @@
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  background-color: var(--color-base);
+}
+
 .gradient-01 {
   background-image: linear-gradient(
     270deg,
